--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Generatore di numeri casuali</h1>
+  <button onclick="generaNumeroCasuale()">Genera numero casuale</button>
+  <p>Numero casuale generato: <span id="numeroCasualePc"></span></p>
+  <p>Numero casuale generato: <span id="numeroCasualeUtente"></span></p>
+   
     
     <script src="assets/file.js"></script>
 </body>
