--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <body>
     <h1>Generatore di numeri casuali</h1>
   <button onclick="generaNumeroCasuale()">Genera numero casuale</button>
-  <p>Numero casuale generato: <span id="numeroCasualePc"></span></p>
-  <p>Numero casuale generato: <span id="numeroCasualeUtente"></span></p>
+  <p>Numero casuale generatoPc: <span id="numeroCasualePc"></span></p>
+  <p>Numero casuale generatoUtente: <span id="numeroCasualeUtente"></span></p>
    
+  
     
     <script src="assets/file.js"></script>
 </body>
