--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    
 
+<body>
+    <h1>Controllo Email</h1>
+
+
+    <label for="email">Inserisci la tua email:</label>
+
+
+    <input type="email" id="email">
+
+    <button id="controlla">Controlla</button>
     
-    <script src="assets/file.js"></script>
+    <p id="esito"></p>
+
+
+ <script src="assets/file.js"></script>
 </body>
+
 </html>
